src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor.component.scss
@use 'src/variables' as vars;
@use 'src/xforge-common/media-breakpoints/breakpoints' as *;

@mixin targetOnly {
  #source-text-area {
    display: none;
  }

  #target-text-area {
    grid-column: 1 / span 2;
  }
}

:host {
  display: flex;
  flex-direction: column;
  height: 100%;

  // Hide editor border, as tab container will have a border
  &::ng-deep {
    .ql-container.ql-snow {
      border: 0;
    }
  }
}

.content {
  height: 100%;
  display: grid;
  column-gap: 10px;

  grid-template-rows: 72px minmax(0, 1fr);
  grid-template-columns: repeat(2, minmax(0, 1fr)); // Prevent cols from expanding past 50%

  &.target-only {
    @include targetOnly;
  }

  @include media-breakpoint('<', sm) {
    @include targetOnly;
    height: calc(100% + 20px);
    margin: -10px;
  }
}

.avatar-padding {
  padding-bottom: 2px;
}

.language-label {
  line-height: 28px;
}

.toolbar {
  margin-top: 10px;
  margin-bottom: 10px;
  border-width: 1px;
  border-style: solid;
  border-color: vars.$border-color;
  padding: 5px 10px;
  grid-column: 1 / span 2;

  @include media-breakpoint('<', sm) {
    margin-top: 0;
    margin-bottom: 0;
    border-bottom-width: 0;
  }
}

.toolbar-separator {
  border-left: 1px solid vars.$border-color;
  margin: 0 4px;
  height: 36px;
  width: 0;
}

.preview-draft-button {
  // Border helps associate button with target editor that shows similar border when it has a draft
  border: 3px dashed vars.$draft-color;
}

.ql-suggestions {
  margin: 0 6px;
}

app-text {
  height: 100%;
  width: 100%;
}

.suggestions-menu {
  width: 280px;
  padding: 15px;
}

.text-ellipsis {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.formatting-invalid-warning,
.out-of-sync-warning,
.doc-corrupted-warning,
.project-text-not-editable,
.no-edit-permission-message {
  margin-bottom: 4px;
}

.both-editors-wrapper {
  column-gap: 5px;
}

.insert-note-fab {
  position: absolute;
  visibility: hidden;
}

.fab-bottom-sheet {
  display: flex;
  flex-direction: column;
  b {
    display: block;
    margin-bottom: 10px;
  }
  mat-form-field {
    width: 100%;
  }
  .fab-action-buttons {
    display: flex;
    justify-content: flex-end;
  }
}

.copyright-banner {
  margin-bottom: 10px;
}

.copyright-more-info {
  cursor: pointer;
  font-weight: bold;
  &:hover {
    text-decoration: underline;
  }
}

.reverse-columns {
  #source-text-area {
    grid-column-start: 2;
  }
  #target-text-area {
    grid-column-start: 1;
  }
}

.text-container {
  display: flex;
  height: 100%;
  position: relative;

  &.has-draft {
    border: 4px dashed vars.$draft-color;
  }
}

.text-area {
  grid-row-start: 2;
}

.container-for-split {
  flex-grow: 1;
  overflow: hidden;
}

